tests/codegen/pass/015-fun-pass-float.hyg
// Multiply x1*x2*x3 function
fun multAll(x1: float, x2: float, x3: float): float = x1 * x2 * x3;

let result_mult_all = multAll(1.0f,2.0f,3.0f);

assert(result_mult_all = 6.0f)
