tests/codegen/fail/021-slice-length-fail.hyg
let arr1: array {int} = array(10, 3);
let arr2: array {int} = slice(arr1, 2, 6);
assert(arrayLength(arr2) = 4)
